feat: show attachments in admin monitoring
